Fixed letter spacing on menu

--- a/assets/stylesheets/modules/header.scss
+++ b/assets/stylesheets/modules/header.scss
@@ -122,3 +122,7 @@ header {
 		}
 	}
 }
+
+.en header .menu a {
+	letter-spacing: -1px;
+}
